tests/invalid/include_depth.c
#include "depth01.h"
int main() { return 0; }
